<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.balarajum.mylogin.MainActivity">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/linere"
        android:orientation="vertical"
        android:background="@drawable/login_frame"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/username"
            android:textSize="15dp"
            android:textColorHint="#bbc"
            android:hint="@string/user"
            />
        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="300dp"
            android:layout_height="0.7dp"
            android:background="#bbc" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"

            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:textSize="15dp"
                android:padding="5dp"
                android:textColorHint="#bbc"
                android:hint="@string/pwd"
                />
        </LinearLayout>
        <View xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="300dp"
            android:layout_height="0.7dp"
            android:background="#bbc" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:padding="5dp"
            android:textColor="@color/forget_color"
            android:layout_gravity="left"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_btn"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:layout_marginTop="19dp"
            android:background="@color/login_color"
           />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="50dp"
        android:id="@+id/name_Com"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linere" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_text"
        android:layout_marginTop="17dp"
        android:id="@+id/cap_text"
        android:textColor="@android:color/white"
        android:layout_below="@+id/name_Com"
        android:layout_alignStart="@+id/name_Com" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/mygmail"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/google"
        android:textColor="#fff"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/textVie"
        android:layout_marginEnd="24dp"
        android:id="@+id/button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singup"
        android:layout_gravity="left"
        android:id="@+id/textVie"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/myfb"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/fb"
        android:textColor="#fff"
        android:id="@+id/button"
        android:layout_above="@+id/textVie"
        android:layout_toEndOf="@+id/name_Com"
        android:layout_marginBottom="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="10dp"
        android:textColor="@android:color/white"
        android:id="@+id/sign"
        android:layout_above="@+id/button"
        android:layout_toStartOf="@+id/button2"
        android:layout_marginBottom="10dp" />

</RelativeLayout>
